# meson-wallet

./: .gitignore  .gitmodules  Cargo.toml  README.md  accounts.toml  bindings.go  bindings.rs  build.rs  client.example.toml  foundry.toml  go.mod  go.sum  wallet_config.toml
contracts/: SmartWalletProxy.sol
contracts/bls/lib/: BLSOpen.sol
contracts/script/: EntryPoint.s.sol
contracts/test/: EntryPoint.t.sol  TestUtils.sol
contracts/utils/: BLSOpen.sol
examples/: client.example.toml  ping.c
lib/: bindings.go  ping.c
meson-wallet/: Cargo.toml  bindings.rs  build.rs  client.example.toml
meson-wallet/lib/: bindings.go
meson-wallet/src/: error.rs  lib.rs  main.rs
smartWallet/: remappings.txt
smartWallet/script/: AccountFactory.s.sol  BLSAccountFactory.s.sol  Deploy.s.sol  EntryPoint.s.sol  SmartWalletLogic.s.sol
smartWallet/src/: AccountFactory.sol  SmartWalletLogic.sol  SmartWalletProxy.sol
smartWallet/src/BLSWallet/: BLSAccountFactory.sol  BLSSignatureAggregator.sol  BLSWallet.sol
smartWallet/src/bls/: BLSAccount.sol  BLSAccountFactory.sol  BLSSignatureAggregator.sol
smartWallet/src/core/: BasePaymaster.sol
smartWallet/test/: BLS.t.sol  BLSUtil.t.sol  EntryPoint.t.sol  SenderCreator.t.sol  TestUtils.sol  wallet.t.sol
src/: bls.rs  bls_util.rs  build.rs  cli.rs  create_sender_util.rs  erc4337_common.rs  erc4337wallet.rs  error.rs  json_rpc.rs  lib.rs  main.rs  meson_common.rs  meson_util.rs  simple_account.rs  tornado_util.rs  user_opertaion.rs  wallet.rs
src/bls/: hash_to_point.rs  multi_sig.rs  multi_sig_account.rs  sig.rs
src/circuits/: Verifier.sol  withdraw.wasm
src/contracts/: AccountFactory.sol
src/contracts/core/: BasePaymaster.sol  EntryPoint.sol
src/contracts/script/: AccountFactory.s.sol  BLSAccountFactory.s.sol  Deploy.s.sol  EntryPoint.s.sol  SmartWalletLogic.s.sol
src/meson_util/: bindings.rs  meson_provider.rs
src/tornado_util/: parse_key.rs  pedersen_hash.rs  sparse_merkle_tree.rs
(+6 files in other folders)
