[package]
name = "meson-wallet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

ethers = { git = "https://github.com/gakonst/ethers-rs" }
clap = { version = "3.0", features = ["derive"] }
futures = "0.3"
ctr = "0.9.1"
scrypt = "0.8.1"
sha3 = "0.10.1"
rand = "0.8.4"
aes = "0.8.1"
base64ct = "1.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = {version = "1.0", features = ["arbitrary_precision"]} 
tempdir = "0.3"
thiserror = "1.0"
eth-keystore = "0.4.1"

[build-dependencies]
bindgen = "0.53.1"
